# Codex_Boaster

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  README.md  azure-pipelines.yml  codex.runtime.json  codexbooster.config.json  docker-compose.yml  helloWorld.js  jest.config.js  mcp_tools  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  runpod.yaml  runtime.config.yaml  travelg3n-cli.js  turbo.json
__tests__/: helloWorld.test.js
backend/: Dockerfile  architect_agent.py  aureus_weights.json  builder_agent.py  chat_agent.py  codex_agent.py  codex_router.py  config_agent.py  credential_helper.py  deploy_agent.py  doc_agent.py  hipcortex_bridge.py  llm_client.py  logger.py  main.py  marketplace.py  mcp_router.py  monetizer_agent.py  orchestration.py  orchestrator_service.py  plugin_manifest.schema.json  reasoning_templates.py  reflexion_agent.py  repo_init_agent.py  rollback.py  security.py  supabase_connector.py  telemetry.py  terminal_runner.py  test_suite_agent.py  tester_agent.py
codex-cli/: Cargo.toml
codex-cli/src/: credentials.rs  main.rs
docs/: README.md  agentic-framework.md  architecture.md  cli_flow.md  e2e_test_plan.md  marketplace.md  roadmap.md  setup-guide.md  solution.md  test_suite_generator.md  usage.md  use_cases.md
examples/: sample_plan.json
frontend/: jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
logs/: runtime_setup_20250829-075035.json  runtime_setup_20250829-075036.json  runtime_setup_20250829-075043.json
(+487 files in other folders)
